// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs when asked to render with additional class matches the snapshot 1`] = `
<div
  className="flex flex-col some-class"
>
  <div
    className="flex w-full rounded-xl"
  >
    <button
      aria-label="Tab 1 label"
      aria-selected={true}
      className="py-1 px-4 w-full font-semibold text-black dark:text-white rounded-l-xl bg-primary-300/70"
      data-test-id="tab1Button"
      id="tab1Button"
      onClick={[Function]}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-label="Tab 2 label"
      aria-selected={false}
      className="py-1 px-4 w-full font-semibold text-black dark:text-white rounded-r-xl bg-primary-100 hover:bg-primary-300/70"
      data-test-id="tab2Button"
      id="tab2Button"
      onClick={[Function]}
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div>
    <div
      className="h-full block"
    >
      Panel 1 
    </div>
  </div>
</div>
`;

exports[`Tabs when asked to render with children matches snapshot 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex w-full rounded-xl"
  >
    <button
      aria-label="Tab 1 label"
      aria-selected={true}
      className="py-1 px-4 w-full font-semibold text-black dark:text-white rounded-l-xl bg-primary-300/70"
      data-test-id="tab1Button"
      id="tab1Button"
      onClick={[Function]}
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-label="Tab 2 label"
      aria-selected={false}
      className="py-1 px-4 w-full font-semibold text-black dark:text-white rounded-r-xl bg-primary-100 hover:bg-primary-300/70"
      data-test-id="tab2Button"
      id="tab2Button"
      onClick={[Function]}
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div>
    <div
      className="h-full block"
    >
      Panel 1 
    </div>
  </div>
</div>
`;

exports[`Tabs when asked to render without children renders without children 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex w-full rounded-xl"
  />
  <div />
</div>
`;
